# atree

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
atree-ffi/src/: lib.rs
atree-python/src/: lib.rs
sprk-ffi/: Cargo.toml
sprk-python/: Cargo.toml
src/: dynamic.rs  lib.rs  output.rs  scalar.rs  simd.rs  svd.rs  tree.rs
tests/: simd.rs
